# rust-sol-tools

./: .env  Cargo.leptos.env  Cargo.toml  index.html  rust-toolchain.toml  style.css  tailwind.config.js
client/src/components/: create_token_button.rs  metadata_form.rs
public/: phantom.js  pinata.js
src/: app.rs  lib.rs  main.rs  upload.rs  wallet.rs
src/routes/: contract.rs  metadata.rs  mod.rs
src/token/: mod.rs  server.rs
src/utils/: contract.rs  mod.rs  pinata.rs
src/utils/pinata/: mod.rs
src/wallet/: metamask.rs  mod.rs  phantom.rs
style/: main.scss
