[package]
name = "sol-tools"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core dependencies
leptos = "0.6.15"
leptos_meta = "0.6.15"
leptos_router = "0.6.15"
leptos_actix = { version = "0.6.15", optional = true }
console_error_panic_hook = "0.1"
log = "0.4"
env_logger = { version = "0.11", optional = true }
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
borsh = "0.10.3"
thiserror = "1.0"
serde-wasm-bindgen = "0.6"

# WASM dependencies
wasm-bindgen = { version = "0.2.86", features = ["serde"] }
wasm-bindgen-futures = "0.4.36"
web-sys = { version = "0.3", features = [
    "Window", "Document", "Element", "HtmlElement", 
    "File", "Blob", "Url", "Response", "Headers",
    "RequestInit", "RequestMode", "Request",
    "Crypto", "SubtleCrypto", "CryptoKey",
    "DomStringMap", "Storage", "Performance",
    "PerformanceTiming", "console"
]}
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
gloo = { version = "0.11", features = ["storage"] }
gloo-utils = "0.2"
reqwasm = "0.5.0"

# Server-only dependencies (marked as optional)
actix-web = { version = "4.4", features = ["macros"], optional = true }
actix-files = { version = "0.6.2", optional = true }
actix-rt = { version = "2.9", optional = true }
tokio = { version = "1.28", features = ["rt-multi-thread", "macros", "fs", "io-util", "net"], optional = true }
futures = { version = "0.3", optional = true }
reqwest = { version = "0.11.27", features = ["json", "rustls-tls"], optional = true }
solana-program = { version = "1.18", optional = true }
solana-sdk = { version = "1.18", optional = true }
solana-client = { version = "1.18", optional = true }
spl-token = { version = "4.0", optional = true }
spl-associated-token-account = { version = "2.0", optional = true }
spl-token-2022 = { version = "0.9", optional = true }
mpl-token-metadata = { version = "4.0", optional = true }
mpl-token-auth-rules = { version = "1.4", optional = true }
bs58 = { version = "0.5", optional = true }
zstd = { version = "0.11.2", optional = true }
leptos_server = { version = "0.6.15", optional = true }

[features]
default = ["hydrate"]

hydrate = [
    "leptos/hydrate",
    "leptos_meta/hydrate",
    "leptos_router/hydrate"
]

[package.metadata.leptos]
output-name = "sol-tools"
site-root = "target/site"
site-pkg-dir = "pkg"
site-addr = "127.0.0.1:3000"
reload-port = 3001
env = "DEV"
bin-target = "sol-tools"
style-file = "style/main.scss"
assets-dir = "assets"
site-root-relative = true
lib-profile-release = "wasm-release"
lib-profile-dev = "dev"
browserquery = "defaults"
watch = true
watch-additional-files = ["./src/**/*"]
features = ["hydrate"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Server-only dependencies
actix-web = { version = "4.4", features = ["macros"] }
actix-files = "0.6.2"
actix-rt = "2.9"
tokio = { version = "1.28", features = ["rt-multi-thread", "macros", "fs", "io-util", "net" ] }
futures = "0.3"
reqwest = { version = "0.11.27", features = ["json", "rustls-tls"] }
solana-program = "1.18"
solana-sdk = "1.18"
solana-client = "1.18"
spl-token = "4.0"
spl-associated-token-account = "2.0"
spl-token-2022 = "0.9"
mpl-token-metadata = "4.0"
mpl-token-auth-rules = "1.4"
bs58 = "0.5"
zstd = "0.11.2+zstd.1.5.2"
leptos_actix = "0.6.15"
env_logger = "0.11"
leptos_server = "0.6.15"
