[package]
name = "sol-tools"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.6.5", features = ["nightly"] }
leptos_meta = { version = "0.6.5", features = ["nightly"] }
leptos_router = { version = "0.6.5", features = ["nightly"] }
console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
borsh = "0.10.3"
thiserror = "1.0"
bs58 = "0.5"
env_logger = "0.11"
solana-program = "1.18"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.89", features = ["serde"] }
wasm-bindgen-futures = "0.4.39"
js-sys = "0.3.66"
web-sys = { version = "0.3.66", features = [
    "Window", "Document", "Element", "HtmlElement", 
    "File", "Blob", "Url", "Response", "Headers",
    "RequestInit", "RequestMode", "Request",
    "Crypto", "SubtleCrypto", "CryptoKey",
    "DomStringMap", "Storage", "Performance",
    "PerformanceTiming", "console", "Navigator"
]}
serde-wasm-bindgen = "0.6"
gloo = { version = "0.11", features = ["storage"] }
gloo-utils = "0.2"
reqwasm = "0.5.0"
getrandom = { version = "0.2", features = ["js"] }
leptos = { version = "0.6.5", features = ["csr", "nightly"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
leptos = { version = "0.6.5", features = ["ssr", "nightly"] }
leptos_actix = "0.6.5"
actix-web = { version = "4.4", features = ["macros"] }
actix-files = "0.6.2"
actix-rt = "2.9"
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "multipart"] }
hostname = "0.3"
solana-sdk = "1.18"
solana-client = "1.18"
spl-token = "4.0"
spl-associated-token-account = "2.0"
spl-token-2022 = "0.9"
mpl-token-metadata = "4.0"
mpl-token-auth-rules = "1.4"

[features]
default = ["ssr"]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
csr = ["leptos/csr"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr"]

[package.metadata.leptos]
output-name = "sol-tools"
site-root = "target/site"
site-pkg-dir = "pkg"
assets-dir = "assets"
style-file = "style/main.scss"
tailwind-input-file = "style/tailwind.css"
tailwind-config-file = "tailwind.config.js"
site-addr = "127.0.0.1:3000"
reload-port = 3001
env = "DEV"
bin-features = ["ssr"]
lib-features = ["hydrate"]
bin-target = "sol-tools"
